[package]
name = "bg3_lib"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bincode = "1.3.3"
flate2 = "1.0.30"
lz4_flex = "0.11.3"
serde = { version = "1.0.203", features = ["derive"] }
serde-big-array = "0.5.1"
uuid = { version = "1.8.0", features = ["serde"] }
zstd = "0.13.1"
