[package]
name = "bg3_lib"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
flate2 = "1.1.2"
lz4_flex = "0.11.5"
serde = { version = "1.0.219", features = ["derive"] }
serde-big-array = "0.5.1"
uuid = { version = "1.17.0", features = ["serde"] }
zstd = "0.13.3"
