[package]
name = "bg3_ui"
version.workspace = true
authors.workspace = true
edition.workspace = true


[dependencies]
egui = { version = "0.28.1", features = ["log"] }
egui_extras = { version = "0.28.1", features = ["all_loaders"] }
image = { version = "0.25.2", features = ["webp"] }
eframe = { version = "0.28.1", features = ["wgpu"] }
egui-file-dialog = "0.6.0"
bg3_lib.workspace = true
