[package]
name = "bg3_ui"
version.workspace = true
authors.workspace = true
edition.workspace = true


[dependencies]
egui = { version = "0.31.1", features = ["log"] }
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
image = { version = "0.25.6", features = ["webp"] }
eframe = { version = "0.31.1", features = ["wgpu"] }
bg3_lib.workspace = true
egui-file-dialog = "0.10.0"
